Update Row block CSS to hide default appender

--- a/src/blocks/row/styles/editor.scss
+++ b/src/blocks/row/styles/editor.scss
@@ -526,6 +526,15 @@ body {
 						}
 					}
 				}
+
+				> .block-list-appender {
+					> div:not(.wp-block) {
+						> .editor-default-block-appender {
+							display: none !important;
+							position: relative;
+						}
+					}
+				}
 			}
 		}
 	}
