Ensure biography inherits selected text color.

--- a/src/blocks/author/styles/editor.scss
+++ b/src/blocks/author/styles/editor.scss
@@ -61,6 +61,10 @@
 			}
 		}
 	}
+
+	&.has-text-color p.wp-block-coblocks-author__biography {
+		color: inherit;
+	}
 }
 
 // Shim to fix styles in the previewer.
