--- a/src/blocks/author/styles/editor.scss
+++ b/src/blocks/author/styles/editor.scss
@@ -1,17 +1,34 @@
 .editor-block-list__block[data-type="coblocks/author"] {
 	.editor-inner-blocks {
 		.editor-block-list__block-edit {
-			margin-top: 0;
 			margin-bottom: 0;
+			margin-top: 0;
 		}
 	}
 
-	.block-library-button__inline-link {
-		margin-top: 5px;
+	.wp-block[data-type="core/button"] {
+		[data-block] {
+			margin-bottom: 0;
+		}
+
+		.block-editor-block-list__block-edit::before {
+			border: none;
+			box-shadow: none;
+		}
 	}
 
-	.editor-block-list__layout .editor-block-list__block > .editor-block-list__block-edit::before {
-		outline: none;
+	// Show the inline button control only when editing the button block.
+	&.is-selected .wp-block-button__inline-link {
+		display: none;
+	}
+
+	&.has-child-selected .wp-block-button__inline-link {
+		display: block;
+	}
+
+	.wp-block-button {
+		margin-bottom: 10px;
+		margin-top: 10px;
 	}
 }
 
@@ -27,12 +44,11 @@
 			padding: 0;
 			position: absolute;
 			width: 100%;
-			z-index: 50;
 
-			&:focus {
+			&:focus:not(:disabled) {
 				background: none;
 				border: none;
-				box-shadow: none;
+				box-shadow: 0 0 0 2px $blue-medium-focus;
 				outline: none;
 			}
 
@@ -46,8 +62,8 @@
 		}
 	}
 
-	&__name {
-		margin: 0.2em 0 0.1em 0;
+	&.has-text-color p.wp-block-coblocks-author__biography {
+		color: inherit;
 	}
 }
 
