--- a/src/blocks/gallery-carousel/styles/style.scss
+++ b/src/blocks/gallery-carousel/styles/style.scss
@@ -59,6 +59,15 @@
 }
 
 .responsive-height {
+
+	&.wp-block-coblocks-gallery-carousel {
+		overflow: hidden;
+	}
+
+	~ span .components-resizable-box__handle {
+		display: none !important;
+	}
+
 	.has-carousel {
 		height: auto !important;
 		padding-bottom: 56.25%;
