Convert blockgallery classes to coblocks

--- a/src/blocks/gallery-carousel/styles/style.scss
+++ b/src/blocks/gallery-carousel/styles/style.scss
@@ -30,12 +30,12 @@
 			margin: 0;
 		}
 
-		.blockgallery--figure {
+		.coblocks--figure {
 			height: 100%;
 			position: relative;
 		}
 
-		.blockgallery--item-thumbnail {
+		.coblocks--item-thumbnail {
 			height: 80px;
 			opacity: 0.4;
 			overflow: hidden;
