--- a/src/blocks/gallery-carousel/styles/editor.scss
+++ b/src/blocks/gallery-carousel/styles/editor.scss
@@ -46,6 +46,26 @@
 		position: inherit;
 	}
 
+	.has-responsive-height {
+		> span .components-resizable-box__handle {
+			display: none !important;
+		}
+
+		.carousel-nav {
+			margin-top: 0 !important;
+		}
+	}
+
+	.has-responsive-height .has-carousel.flickity-enabled {
+		height: auto !important;
+		padding-bottom: 56.25%;
+		position: relative;
+	}
+
+	.has-responsive-height.components-resizable-box__container {
+		height: auto !important;
+	}
+
 	.carousel-nav {
 		.coblocks--item-thumbnail {
 			opacity: 0.4;
