Add lightbox support to masonry and stacked galleries (#840)
* Gallery Masonry changes.

* Icons added.

* Cleanup

* Tweak lightbox toggle label

* UI tweaks

* UI tweaks

* Update classes to lightbox, use buttons for arrows

* Update _lightbox.scss

* Lightbox fixes - not adding modal if lightbox is turned off, adding modal to the end of body element.

* Removed data-url attribute and adjusted lightbox script.

* getModalHelp to getLightboxHelp

* Start adding stacked gallery support for lightbox

* Add lightbox to transforms

* Rearrange where data-index is

* Add data-index to stacked

* Add deprecation for Stacked

* Update deprecated.js

* Update deprecated.js

* Add deprecation

* Finishin working deprecation for stacked

* Add initial deprecation for carousel

* Add working deprecation for masonry

* Resolve eslint issues

* Add keywords

* Fixed bug for lightbox when we have multiple galleries

* Eslint

--- a/src/components/block-gallery/styles/style.scss
+++ b/src/components/block-gallery/styles/style.scss
@@ -103,4 +103,5 @@ figcaption.coblocks-gallery--primary-caption {
 @import "style/captions";
 @import "style/background-radius";
 @import "style/flickity";
+@import "style/lightbox";
 @import "style/core-themes";
