Add thumbnail and responsive height controls to the Carousel block (#839)
* Carousel changes

* Fix block.json error

* Inspector fix for toggles.

* Remove thumbSize and radiusThumbs as they're not being used

* Remove navClasses and add thumbnailClasses instead

* Fix thumbnail margins, move Responsive Height to Advanced

* Resolving conflicts

* small fixes to save function

* style changes for carousel, removed resize when responsive height

* Add missing classes to the front-end

* Update save.js

* Fix duplicate consts

* Add hover to thumbnails

* Add keywords

* Convert blockgallery classes to coblocks

* Fix responsive height

* linting

* Only use flickityStyles if responsiveHeight is not defined

* Rearrange controls for improved UX

* Fixing eslint issues

* Fixes as requested from JR

--- a/src/blocks/gallery-carousel/styles/style.scss
+++ b/src/blocks/gallery-carousel/styles/style.scss
@@ -8,4 +8,71 @@
 	.coblocks-gallery--figure {
 		height: 100%;
 	}
+
+	@for $i from 2 through 20 {
+		.carousel-nav.has-border-radius-#{ $i } {
+			img {
+				border-radius: #{$i}px;
+			}
+		}
+	}
+
+	.carousel-nav {
+		height: auto;
+
+		.flickity-viewport {
+			height: 80px !important;
+			margin-left: 0;
+			margin-right: 0;
+		}
+
+		figure {
+			margin: 0;
+		}
+
+		.coblocks--figure {
+			height: 100%;
+			position: relative;
+		}
+
+		.coblocks--item-thumbnail {
+			height: 80px;
+			opacity: 0.4;
+			overflow: hidden;
+			transition: opacity 250ms ease;
+			width: 100px;
+
+			&:hover {
+				opacity: 0.66;
+			}
+
+			&.is-selected {
+				opacity: 1;
+			}
+
+			img {
+				height: 100%;
+				object-fit: cover;
+				position: absolute;
+				top: 0;
+				vertical-align: middle;
+				width: 100%;
+			}
+		}
+	}
+}
+
+.has-responsive-height {
+	.has-carousel {
+		height: auto !important;
+		padding-bottom: 56.25%;
+		position: relative;
+
+		.flickity-viewport {
+			left: 0;
+			position: absolute;
+			top: 0;
+			width: 100%;
+		}
+	}
 }
