--- a/src/blocks/accordion/accordion-item/styles/editor.scss
+++ b/src/blocks/accordion/accordion-item/styles/editor.scss
@@ -107,3 +107,12 @@
 	> [data-block] {
 	margin-bottom: -21px;
 }
+
+.block-editor-block-list__block[data-type="coblocks/accordion"].is-selected
+	[data-type="coblocks/accordion-item"]:not(.is-selected)
+	> .block-editor-block-list__block-edit::before,
+.block-editor-block-list__block[data-type="coblocks/accordion"].has-child-selected
+	[data-type="coblocks/accordion-item"]:not(.is-selected)
+	> .block-editor-block-list__block-edit::before {
+	border: 1px dashed rgba(123, 134, 162, 0.3);
+}
