--- a/src/blocks/gallery-carousel/styles/editor.scss
+++ b/src/blocks/gallery-carousel/styles/editor.scss
@@ -81,6 +81,11 @@
 	}
 }
 
+.wp-block[data-type="core/group"] .components-resizable-box__container .wp-block-coblocks-gallery-carousel {
+	margin-bottom: 40px !important;
+	margin-top: 40px !important;
+}
+
 // Shim to fix styles in the previewer.
 .block-editor-inserter__preview-content .wp-block-coblocks-gallery-carousel {
 	.flickity-button:disabled {
