--- a/src/blocks/gallery-masonry/styles/editor.scss
+++ b/src/blocks/gallery-masonry/styles/editor.scss
@@ -90,6 +90,11 @@
 	}
 }
 
+.wp-block[data-type="core/group"] .wp-block-coblocks-gallery-masonry {
+	margin-bottom: 40px !important;
+	margin-top: 40px !important;
+}
+
 // Shim to fix styles in the previewer.
 .block-editor-inserter__preview-content .wp-block-coblocks-gallery-masonry {
 	.coblocks-gallery--item:last-child {
