--- a/src/components/block-gallery/styles/editor/_gallery-item-menus.scss
+++ b/src/components/block-gallery/styles/editor/_gallery-item-menus.scss
@@ -1,7 +1,7 @@
 .components-coblocks-gallery-item__remove-menu {
 	background-color: theme(primary);
 	display: inline-flex;
-	padding: 2px;
+	padding: 4px;
 	position: absolute;
 	right: 2px;
 	top: 2px;
@@ -16,7 +16,7 @@
 .components-coblocks-gallery-item__move-menu {
 	display: inline-flex;
 	left: 2px;
-	padding: 2px;
+	padding: 4px;
 	position: absolute;
 	top: 2px;
 	z-index: 20;
@@ -41,12 +41,7 @@
 .coblocks-gallery-item__button {
 	box-shadow: none !important;
 	color: $white;
-	padding: 0;
-
-	&:not(:disabled):not([aria-disabled="true"]):hover {
-		background: theme(primary) !important;
-		border-color: theme(primary) !important;
-		color: $white !important;
-		opacity: 0.75;
-	}
+	height: 24px;
+	padding: 2px;
+	width: 24px;
 }
