convert Pricing Table block to use alignment classnames (#882)
* deprecate pricing table to use alignment classnames

* properly import attributes to deprecated

* add styles to handle alignmnet

* removed superfluous code

* removed superfluous styles

--- a/src/blocks/pricing-table/styles/style.scss
+++ b/src/blocks/pricing-table/styles/style.scss
@@ -105,10 +105,10 @@ $gutter: 0.75em;
 	}
 }
 
-.has-center-content .wp-block-coblocks-pricing-table-item__price-wrapper {
+.has-text-align-center .wp-block-coblocks-pricing-table-item__price-wrapper {
 	justify-content: center;
 }
 
-.has-right-content .wp-block-coblocks-pricing-table-item__price-wrapper {
+.has-text-align-right .wp-block-coblocks-pricing-table-item__price-wrapper {
 	justify-content: flex-end;
 }
