Add support for custom links

--- a/src/blocks/gallery-collage/styles/style.scss
+++ b/src/blocks/gallery-collage/styles/style.scss
@@ -1,5 +1,5 @@
 .wp-block-coblocks-gallery-collage {
-	background: #f0f0f0;
+	background: #eeeeee;
 
 	ul {
 		display: flex;
@@ -135,7 +135,7 @@
 		position: relative;
 		width: 100%;
 
-		> img {
+		img {
 			height: 100%;
 			object-fit: cover;
 			position: absolute;
