--- a/src/blocks/gallery-collage/styles/style.scss
+++ b/src/blocks/gallery-collage/styles/style.scss
@@ -65,8 +65,6 @@
 	&__item {
 		figure,
 		.block-editor-media-placeholder {
-			// margin-left: 0;
-			// margin-top: 0;
 			padding: 0;
 		}
 
@@ -82,7 +80,7 @@
 
 		&:nth-child(2) {
 			align-self: flex-end;
-			// margin-right: auto;
+			margin-right: auto;
 			width: 25%;
 
 			figure,
@@ -93,7 +91,7 @@
 
 		&:nth-child(3) {
 			align-self: flex-start;
-			// margin-left: auto;
+			margin-left: auto;
 			width: 25%;
 
 			figure,
@@ -102,14 +100,23 @@
 			}
 		}
 
-		&:nth-child(4),
+		&:nth-child(4) {
+			align-self: flex-start;
+			width: 25%;
+
+			figure,
+			.block-editor-media-placeholder {
+				padding-top: calc(82 / 69 * 100%);
+			}
+		}
+
 		&:nth-child(5) {
 			align-self: flex-start;
 			width: 25%;
 
 			figure,
 			.block-editor-media-placeholder {
-				padding-top: calc(82 / 63 * 100%);
+				padding-top: calc(82 / 65 * 100%);
 			}
 		}
 	}
@@ -117,7 +124,7 @@
 	.is-style-tiled &__item {
 		&:nth-child(1),
 		&:nth-child(4) {
-			width: calc(590 / 890 * 100%);
+			width: 66.66%;
 
 			figure,
 			.block-editor-media-placeholder {
@@ -127,11 +134,11 @@
 
 		&:nth-child(2),
 		&:nth-child(3) {
-			width: calc(300 / 890 * 100%);
+			width: 33.33%;
 
 			figure,
 			.block-editor-media-placeholder {
-				padding-top: calc(380 / 300 * 100%);
+				padding-top: calc(380 / 288 * 100%);
 			}
 		}
 	}
