--- a/src/blocks/features/styles/style.scss
+++ b/src/blocks/features/styles/style.scss
@@ -6,14 +6,29 @@
 
 	.has-left-content {
 		text-align: left;
+
+		img {
+			margin-left: 0;
+			margin-right: auto;
+		}
 	}
 
 	.has-center-content {
 		text-align: center;
+
+		img {
+			margin-left: auto;
+			margin-right: auto;
+		}
 	}
 
 	.has-right-content {
 		text-align: right;
+
+		img {
+			margin-left: auto;
+			margin-right: 0;
+		}
 	}
 
 	.wp-block-coblocks-feature {
