--- a/src/blocks/gallery-collage/styles/style.scss
+++ b/src/blocks/gallery-collage/styles/style.scss
@@ -1,50 +1,10 @@
 .wp-block-coblocks-gallery-collage {
-	// For desktop.
-	@media (min-width: 700px) {
-		@for $i from 1 through 10 {
-			.pt-#{ $i * 5 } {
-				padding-top: #{round($i * 5 / 2)}px;
-			}
-		}
-
-		@for $i from 1 through 10 {
-			.pr-#{ $i * 5 } {
-				padding-right: #{round($i * 5 / 2)}px;
-			}
-		}
-
-		@for $i from 1 through 10 {
-			.pb-#{ $i * 5 } {
-				padding-bottom: #{round($i * 5 / 2)}px;
-			}
-		}
-
-		@for $i from 1 through 10 {
-			.pl-#{ $i * 5 } {
-				padding-left: #{round($i * 5 / 2)}px;
-			}
-		}
-	}
-
-	// // For mobile.
-	// @media (max-width: 699px) {
-	// 	// Add gutter margin to the figure elements.
-	// 	@for $i from 1 through 10 {
-	// 		.has-gutter-mobile-#{ $i * 5 } {
-	// 			margin: #{round($i * 5 / 2)}px !important;
-	// 			max-width: calc(100% - #{round($i * 5)}px) !important;
-
-	// 			figure {
-	// 				margin: #{round($i * 5 / 2)}px;
-	// 			}
-	// 		}
-	// 	}
-	// }
-
 	ul {
 		display: flex;
 		flex-wrap: wrap;
 		list-style-type: none;
+		margin: 0;
+		padding: 0;
 	}
 
 	&__item {
@@ -113,7 +73,7 @@
 
 			figure,
 			.block-editor-media-placeholder {
-				padding-top: calc(380 / 590 * 100%);
+				padding-top: calc(380 / 583 * 100%);
 			}
 		}
 
@@ -218,5 +178,57 @@
 
 	&:not(.has-caption-color).has-caption-style-light figcaption {
 		color: $black;
+	}
+}
+
+// For mobile.
+@for $i from 1 through 10 {
+	.pt-#{ $i * 5 } {
+		padding-top: #{round($i * 5 / 2)}px;
+	}
+}
+
+@for $i from 1 through 10 {
+	.pr-#{ $i * 5 } {
+		padding-right: #{round($i * 5 / 2)}px;
+	}
+}
+
+@for $i from 1 through 10 {
+	.pb-#{ $i * 5 } {
+		padding-bottom: #{round($i * 5 / 2)}px;
+	}
+}
+
+@for $i from 1 through 10 {
+	.pl-#{ $i * 5 } {
+		padding-left: #{round($i * 5 / 2)}px;
+	}
+}
+
+// For desktop.
+@media (min-width: 700px) {
+	@for $i from 1 through 10 {
+		.desktop\:pt-#{ $i * 5 } {
+			padding-top: #{round($i * 5 / 2)}px;
+		}
+	}
+
+	@for $i from 1 through 10 {
+		.desktop\:pr-#{ $i * 5 } {
+			padding-right: #{round($i * 5 / 2)}px;
+		}
+	}
+
+	@for $i from 1 through 10 {
+		.desktop\:pb-#{ $i * 5 } {
+			padding-bottom: #{round($i * 5 / 2)}px;
+		}
+	}
+
+	@for $i from 1 through 10 {
+		.desktop\:pl-#{ $i * 5 } {
+			padding-left: #{round($i * 5 / 2)}px;
+		}
 	}
 }
