--- a/src/blocks/gallery-collage/styles/editor.scss
+++ b/src/blocks/gallery-collage/styles/editor.scss
@@ -1,32 +1,42 @@
-.editor-block-list__block[data-type="coblocks/gallery-collage"],
-.editor-block-preview__content {
-	.wp-block-coblocks-gallery-collage {
-		ul {
-			list-style-type: none;
+.wp-block-coblocks-gallery-collage {
+	&__figure {
+		img {
+			transition: opacity 0.1s linear;
 		}
 
-		&__figure {
-			transition: opacity 0.1s linear;
+		&.is-transient img {
+			opacity: 0.3;
+		}
 
-			&.is-selected {
-				&::after {
-					bottom: 0;
-					box-shadow: inset 0 0 0 4px theme(primary);
-					content: "";
-					left: 0;
-					position: absolute;
-					right: 0;
-					top: 0;
-					z-index: 1;
-				}
+		&.is-selected {
+			&::after {
+				bottom: 0;
+				box-shadow: inset 0 0 0 4px theme(primary);
+				content: "";
+				left: 0;
+				position: absolute;
+				right: 0;
+				top: 0;
+				z-index: 1;
 			}
 		}
 	}
+}
+
+.editor-block-list__block[data-type="coblocks/gallery-collage"] {
+	ul {
+		list-style-type: none;
+	}
 
 	.block-editor-media-placeholder {
-		background-color: $light-gray-200;
+		background: $dark-opacity-light-200;
+		min-height: inherit;
 		outline: 1px dashed $dark-gray-150;
 		outline-offset: -1px;
+
+		.is-dark-theme & {
+			background: $light-opacity-light-200;
+		}
 
 		&:hover {
 			outline: 1px dashed $dark-gray-500;
@@ -53,6 +63,17 @@
 		}
 	}
 
+	.is-style-layered {
+		.components-form-file-upload {
+			display: none;
+		}
+
+		li:nth-child(4) .components-coblocks-gallery-item__remove-menu {
+			left: 2px;
+			right: auto;
+		}
+	}
+
 	// Captions.
 	.editor-rich-text {
 		bottom: 0;
@@ -74,14 +95,9 @@
 		overflow: hidden;
 		position: relative !important;
 	}
-
-	.is-style-layered .wp-block-coblocks-gallery-collage__item {
-		.components-form-file-upload {
-			display: none;
-		}
-	}
 }
 
-.wp-block-coblocks-gallery-collage__figure.is-transient img {
-	opacity: 0.3;
+// Shim for styles panel.
+.components-panel__body .block-editor-block-preview__container .wp-block-coblocks-gallery-collage .components-placeholder__fieldset {
+	display: none;
 }
