--- a/src/blocks/gallery-collage/styles/style.scss
+++ b/src/blocks/gallery-collage/styles/style.scss
@@ -88,6 +88,13 @@
 		}
 	}
 
+	&.is-style-layered {
+		ul {
+			padding-left: 1em;
+			padding-right: 1em;
+		}
+	}
+
 	.is-style-layered &__item {
 		align-self: flex-start;
 
