Target only image block

--- a/src/extensions/image-styles/styles/style.scss
+++ b/src/extensions/image-styles/styles/style.scss
@@ -12,9 +12,12 @@
 	mask-size: cover;
 }
 
-.block-editor-block-styles__item-preview {
+// Shim for pre WordPress 5.3 - @todo, remove when 5.3 is released.
+.block-editor-block-styles__item-preview .wp-block-image {
+	margin-top: 0;
+
 	.components-resizable-box__container {
-		width: 100% !important;
 		height: 100% !important;
+		width: 100% !important;
 	}
 }
