--- a/src/blocks/gallery-collage/styles/style.scss
+++ b/src/blocks/gallery-collage/styles/style.scss
@@ -80,7 +80,7 @@
 
 			figure,
 			.block-editor-media-placeholder {
-				padding-top: calc(380 / 583 * 100%);
+				padding-top: 66%;
 			}
 		}
 
@@ -90,7 +90,7 @@
 
 			figure,
 			.block-editor-media-placeholder {
-				padding-top: calc(380 / 288 * 100%);
+				padding-top: 100%;
 			}
 		}
 	}
